--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "cookbooks/7-zip"]
 	path = cookbooks/7-zip
 	url = https://github.com/sneal/7-zip.git
+[submodule "cookbooks/build-essential"]
+	path = cookbooks/build-essential
+	url = https://github.com/chef-cookbooks/build-essential.git
