--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "cookbooks/build-essential"]
 	path = cookbooks/build-essential
 	url = https://github.com/chef-cookbooks/build-essential.git
+[submodule "cookbooks/apt"]
+	path = cookbooks/apt
+	url = https://github.com/chef-cookbooks/apt.git
