--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,30 @@
 [submodule "cookbooks/chef_handler"]
 	path = cookbooks/chef_handler
 	url = https://github.com/chef-cookbooks/chef_handler.git
+[submodule "cookbooks/maven"]
+	path = cookbooks/maven
+	url = https://github.com/chef-cookbooks/maven.git
+[submodule "cookbooks/openssl"]
+	path = cookbooks/openssl
+	url = https://github.com/chef-cookbooks/openssl.git
+[submodule "cookbooks/postgresql"]
+	path = cookbooks/postgresql
+	url = https://github.com/hw-cookbooks/postgresql.git
+[submodule "cookbooks/yum-epel"]
+	path = cookbooks/yum-epel
+	url = https://github.com/chef-cookbooks/yum-epel.git
+[submodule "cookbooks/yum"]
+	path = cookbooks/yum
+	url = https://github.com/chef-cookbooks/yum.git
+[submodule "cookbooks/git"]
+	path = cookbooks/git
+	url = https://github.com/jssjr/git.git
+[submodule "cookbooks/java"]
+	path = cookbooks/java
+	url = https://github.com/agileorbit-cookbooks/java.git
+[submodule "cookbooks/database"]
+	path = cookbooks/database
+	url = https://github.com/chef-cookbooks/database.git
+[submodule "cookbooks/dmg"]
+	path = cookbooks/dmg
+	url = https://github.com/chef-cookbooks/dmg.git
